# AutoHexUploader

./: .gitignore  ArgumentParser.cpp  ArgumentParser.h  BasicVariableInfo.h  CMakeLists.txt  GithubRequestManager.cpp  GithubRequestManager.h  Makefile  PrinterInfo.cpp  PrinterInfo.h  Timer.cpp  Timer.h  WebRequestManager.cpp  WebRequestManager.h  errorcode.h  local_build.sh  main.cpp  test.sh
assets/: build_ahx.sh  build_ahx_rpi.sh
include/: ArgumentParser.h  BasicVariableInfo.h  ErrorLogger.h  GithubRequestManager.h  Logger.h  PrinterInfo.h  Timer.h  UpdateManager.h  WebRequestManager.h  errorcode.h
lib/: jsoncpp.precompiled
src/: ArgumentParser.cpp  BasicVariableInfo.cpp  ErrorLogger.cpp  GithubRequestManager.cpp  Logger.cpp  PrinterInfo.cpp  Timer.cpp  UpdateManager.cpp  WebRequestManager.cpp  main.cpp
